--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,6 +7,7 @@
     height: 100vh;
     overflow: hidden;
     transition: all ease 0.5s;
+    z-index: 998;
 }
 
 .sidebar .sidebar-avatar {
@@ -72,10 +73,10 @@
     position: relative;
 }
 
-@media screen and (max-width: 468px) {
+@media screen and (max-width: 768px) {
     .sidebar {
         width: 100%;
-        left: -400px;
+        left: -1000px;
     }
 
     .sidebar .sidebar-avatar {
