--- a/src/pages/SignIn/signin.css
+++ b/src/pages/SignIn/signin.css
@@ -34,20 +34,20 @@
     font-size: 0.8rem;
 }
 
-form {
+.form-login {
     margin-top: 1.5rem;
     width: 60%;
     display: flex;
     flex-direction: column;
 }
 
-form h1 {
+.form-login h1 {
     text-align: center;
     color: var(--white);
     margin-bottom: 1.2rem;
 }
 
-form input {
+.form-login input {
     height: 40px;
     padding: 8px 16px;
     border: 0;
@@ -55,7 +55,7 @@ form input {
     margin-bottom: 6px;
 }
 
-form button {
+.form-login button {
     height: 40px;
     margin-top: 8px;
     border: 0;
@@ -67,6 +67,6 @@ form button {
     color: var(--white);
 }
 
-form button:hover {
+.form-login button:hover {
     background: var(--blue-hover);
 }
